--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ table, th, td {
 <h1>Eliise Randmaa (193679)</h1>
 
 <a>
-<img src=”pilt.jpg” alt="Eliise Randmaa" width="42" height="52" border="6">
+<img src=”IMG_3075.jpg” alt="Eliise Randmaa" width="42" height="52" border="0">
 </a>
 
 <p>Welcome to my very own website. Here you can find out a little more about myself.</p>
