--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ table, th, td {
 
 <h2>About</h2>
 
-<p>I ammmm a nineteen-year-old girl with high expectations in life and in order 
+<p>I am a nineteen-year-old girl with high expectations in life and in order 
 to achieve my goals I am studying development of IT systems in the best technology 
 university in Estonia-  <a href="https://www.ttu.ee">TalTech</a>. Dancing has been 
 a big part of my life so I joined the TalTech Cheerleaders´ Showdance group. 
