--- a/index.html
+++ b/index.html
@@ -9,47 +9,54 @@ table, th, td {
 </head>
 <body>
 
-<h1>Eliise Randmaa (193679)</h1>
+<h1><i>Eliise Randmaa (193679)</i><h1>
 
-<a>
-<img src=”IMG_3075.jpg” alt="Eliise Randmaa" width="42" height="52" border="0">
-</a>
+<p>
 
-<p>Welcome to my very own website. Here you can find out a little more about myself.</p>
+<img src="https://scontent-hel2-1.xx.fbcdn.net/v/t1.0-9/72941980_2603077953048518_6167577237534015488_n.jpg?_nc_cat=106&_nc_oc=AQnbvzHzd16wxfEIRU9IW7wGNECOCv79zchaYmAESERRa2jwE5ZNlTIxqBTyAbZ_PUya3-X7EUcJdcLPlLrNCg-k&_nc_ht=scontent-hel2-1.xx&oh=4ecd6e31c59646f63e33d6cf65e9ddb7&oe=5E5A23E3" alt="Eliise Randmaa!" width="400" height="600" border="0">
+</p>
+
+<p><i>Welcome to my very own website. Here you can find out a little more about myself.</i><p>
 
 
 <h2>About</h2>
 
-<p>I am a nineteen-year-old girl with high expectations in life and in order 
-to achieve my goals I am studying development of IT systems in the best technology 
-university in Estonia-  <a href="https://www.ttu.ee">TalTech</a>. Dancing has been 
-a big part of my life so I joined the TalTech Cheerleaders´ Showdance group. 
-I enjoy making coregraphies. I have various hobbies that also include making others happy. 
-I enjoy doing track and field, I have even competed in the Estonian Championships. 
-Makeup is one of my passions, making others glow up for an occasion makes them happy 
-and warms my heart. Traveling and discovering new places and rich cultures helps me 
-get a better grip of the world. I take interest in volunteering and organizing fashion 
-shows in my city. I’ve been the leader of the design team of the annual fashion show 
-MoeP.A.R.K for 4 years. Also I like modeling and being in front of the camera, that’s 
-why I took part in the 2016 Estonian Princess competition. All of that makes me a 
-high-reaching, enthusiastic and goal-oriented person with a positive attitude.</p>
+<p><i>I am a nineteen-year-old girl with high expectations in life and in order         <br>
+to achieve my goals I am studying development of IT systems in the best technology      <br>
+university in Estonia-  <a href="https://www.ttu.ee">TalTech</a>. 
+<p>Dancing has been a big part of my life so I joined the TalTech Cheerleaders´ <br>
+Showdance group.           
+I enjoy making coregraphies. I have various hobbies that also include making others     <br>
+happy. I enjoy doing track and field, I've even competed in the Estonian Championships. <br> 
+Makeup is one of my passions, making others glow up for an occasion makes them happy    <br>
+and warms my heart. Traveling and discovering new places and rich cultures helps me     <br>
+get a better grip of the world. I take interest in volunteering and organizing fashion  <br> 
+shows in my city. I’ve been the leader of the design team of the annual fashion show    <br>
+MoeP.A.R.K for 4 years. 
+<p>Also I like modeling and being in front of the camera, that’s   <br>
+why I took part in the 2016 Estonian Princess competition. Most recently I represented  <br>
+Estonia in the Miss Grand International 2019 beauty pageant in Venezuela. All of that   <br>
+makes me a high-reaching, enthusiastic and goal-oriented person with a positive attitude.</i><p>
 
 
 <h2>Contact</h2>
 
 <table>
-</tr> 
-<td>Instagram:</td>
-<td>eliiserndm</td> 
 </tr>
-</tr> 
-<td>Facebook:</td><td>Eliise Randmaa</td> 
+<td><i>Instagram:  </td>
+<td><i>eliiserndm</td>
 </tr>
-<tr> 
-<<td>E-mail:</td><td>eliise.randmaa@gmail.com  </td> 
 </tr>
-<tr> 
-<td>Phone:</td><td>+372 53012366 </td>
+<td><i>Facebook:</td>
+<td><i>Eliise Randmaa</td>
+</tr>
+<tr>
+<td><i>E-mail:</td>
+<td><i>eliise.randmaa@gmail.com  </td>
+</tr>
+<tr>
+<td><i>Phone:</td>
+<td><i>+372 53012366</td>
 </tr>
 </table>
 
