--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ table, th, td {
 <p><i>Welcome to my very own website. Here you can find out a little more about myself.</i><p>
 
 
-<h2>About</h2>
+<h2>About me</h2>
 
 <p><i>I am a nineteen-year-old girl with high expectations in life and in order         <br>
 to achieve my goals I am studying development of IT systems in the best technology      <br>
@@ -39,9 +39,13 @@ Estonia in the Miss Grand International 2019 beauty pageant in Venezuela. All of
 makes me a high-reaching, enthusiastic and goal-oriented person with a positive attitude.</i><p>
 
 
-<h2>Contact</h2>
+<h2>Contact me</h2>
 
 <table>
+   <tr>
+    <th>Platform</th>
+    <th>Information</th>
+  </tr>
 </tr>
 <td><i>Instagram:  </td>
 <td><i>eliiserndm</td>
